--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -14,3 +14,9 @@ jobs:
         run: npm install
       - name: Build code
         run: npm run build
+  context:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Output Github context
+        run: echo "${{toJSON(github)}}"
